--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -13,5 +14,8 @@
   "keywords": [],
   "author": "Sidhant Panda <sidhantpanda@gmail.com> (http://hashexclude.com)",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/sidhant/shippable-test#readme"
+  "homepage": "https://bitbucket.org/sidhant/shippable-test#readme",
+  "dependencies": {
+    "express": "^4.15.0"
+  }
 }
